--- a/lesson-9/css/style.css
+++ b/lesson-9/css/style.css
@@ -1,4 +1,5 @@
 body
+
 { margin: 0;
 	padding: 0;
 overflow: hidden;
@@ -15,4 +16,14 @@ h1
 {
 	color: #fff;
 	text-transform: uppercase;
+}
+
+section#icon
+{
+	background-color: #fff;
+}
+.img-1
+{ width:100px;
+	height:100px; 
+
 }
