--- a/lesson-9/css/style.css
+++ b/lesson-9/css/style.css
@@ -26,3 +26,15 @@ section#icon
 { width:100px;
 	height:150px; 
 }
+.img-2 
+{ width:100px;
+	height:150px; 
+}
+.img-3 
+{width:100px;
+	height:150px; 
+}
+.img-4
+{width:100px;
+	height:150px;
+}
