--- a/lesson-10/style.css
+++ b/lesson-10/style.css
@@ -2,8 +2,6 @@
 background-color: red;
 width: 100px;
 height: 100px;
-border-color: black;
-border-width: 5px;
-border-style: solid;
+border: 10px solid green
 }
 
