--- a/lesson-10/css/style.css
+++ b/lesson-10/css/style.css
@@ -2,8 +2,7 @@
 background-color: red;
 width: 100px;
 height: 100px;
-border: 20px solid green
+border: 20px solid green;
 border-bottom-color: blue;
 border-top-color: purple;
 }
-
