--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -24,7 +24,7 @@ input, button, textarea {
  }
 }
 header {
-background: @bg-grey 
+background: @bg-grey url(../img/main-bg.jpg) no-reneart center center;
 background-size: cover;
 min-height: 700px;
 height: 100 vh;
