--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -24,7 +24,7 @@ input, button, textarea {
  }
 }
 header {
-background: @bg-grey url(../img/main-bg.jpg) no-reneart center center;
+background: @bg-grey  url(../img/main-bg.jpg) no-reneart center center;
 background-size: cover;
 min-height: 700px;
 height: 100vh;
@@ -42,5 +42,12 @@ line-height: 49px;
 p {
 	 .opn-bold;
 	 font-size:36px;
+     color: lighten (@base-red; 5%)
 }
+ }
+  }
+  &- nav-bal {
+
+  }
+
 
