--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -40,14 +40,14 @@ height: 55px;
 border: 3px solid @base-black;	
 line-height: 49px;
 p {
-	 .opn-bold;
+	 .opn-red;
 	 font-size:36px;
      color: lighten (@base-red; 5%)
 }
  }
   }
   &- nav-bal {
-
+  width: 55px;
   }
 
 
