--- a/lesson-10/style.css
+++ b/lesson-10/style.css
@@ -1,5 +1,11 @@
-.box {
+.box-1 {
 background - color: red;
+width: 100px;
+height: 100px;	
+margin-top: 20px;
+}
+.box-2 {
+	background - color: red;
 width: 100px;
 height: 100px;	
 margin-top: 20px;
